manifests/service_main.yaml
apiVersion: v1
kind: Service
metadata:
  name: riseclipse-main
spec:
  selector:
    app: riseclipse-poc
    project: riseclipse-poc
    service: riseclipse-main
  ports:
  - port: 80
    targetPort: 8080
    name: http
