manifests/service_secondary.yaml
apiVersion: v1
kind: Service
metadata:
  name: riseclipse-secondary
spec:
  selector:
    app: riseclipse-poc
    project: riseclipse-poc
    service: riseclipse-secondary
  ports:
  - port: 80
    targetPort: 8080
    name: http
